Thu, 30 Aug 2007 21:06:28 +0200 <thp@perli.net>
Dependency check for python-feedparser in bin/gpodder

	* bin/gpodder: Add dependency check and warning (with exit) if
	python-feedparser is not installed, as python-feedparser now is a
	dependency of gPodder

Thu, 30 Aug 2007 20:51:46 +0200 <thp@perli.net>
Support for modifying DownloadHistory and PlaybackHistory in GUI

	* data/gpodder.glade: Added menu items in gPodder main window
	* src/gpodder/gui.py: Add menu items to treeAvailable's context menu
	to toggle/set downloaded and played status on selected episodes
	* src/gpodder/libgpodder.py: Add del_item() function to
	DownloadHistory to support removing items from the history list;
	enhance history_mark_{played,downloaded}() functions for add/delete

Thu, 30 Aug 2007 20:46:48 +0200 <thp@perli.net>
Improved pubDate parsing; episode delete bugfix

	* src/gpodder/libpodcasts.py: Let feedparser parse the pubDate field
	of episodes and use new function in gpodder.util to convert the parsed
	pubDate to a string; bugfix for remove downloaded episode by URL
	* src/gpodder/util.py: Add updated_parsed_to_rfc2822() function that
	converts the "updated_parsed" field from feedparser to a RFC2822
	string

Thu, 30 Aug 2007 12:03:24 +0200 <thp@perli.net>
Remove obsolete documentation in doc/dev; cosmetic changes

	* data/po/Makefile: Upgrade to GPLv3
	* data/po/README: Mention i18n page on gPodder's website
	* doc/dev/build-deps-breezy.txt: Removed
	* doc/dev/debian.txt: Removed
	* doc/dev/i18n.txt: Removed
	* doc/dev/porting.txt: Removed
	* doc/dev/svncl.sed: Upgrade to GPLv3; modify look added and removed
	files

Wed, 29 Aug 2007 20:26:50 +0200 <thp@perli.net>
Upgrade to the GNU General Public License, Version 3

	* bin/gpodder: Upgrade to GPLv3
	* COPYING: Upgrade to GPLv3
	* doc/dev/copyright_notice: Upgrade to GPLv3
	* Makefile: Upgrade to GPLv3
	* README: Upgrade to GPLv3
	* setup.py: Upgrade to GPLv3
	* src/gpodder/*.py: Upgrade to GPLv3 (except for SimpleGladeApp and