@@ -30,8 +30,8 @@ or played back on the user's desktop.
 # PLEASE DO NOT CHANGE FORMAT OF __version__ LINE (setup.py reads this)
 
 __author__    = "Thomas Perl <thp@perli.net>"
-__version__   = "0.9.4~svn~experimental"
-__date__      = "2007-08-28"
+__version__   = "0.9.5+svn"
+__date__      = "2007-08-31"
 __copyright__ = "Copyright (c) 2005-2007 %s. All rights reserved." % __author__
 __licence__   = "GPL"
 
