@@ -1975,10 +1975,6 @@
 	  <property name="spacing">5</property>
 
 	  <child>
-	    <placeholder/>
-	  </child>
-
-	  <child>
 	    <widget class="GtkButton" id="btnOK">
 	      <property name="visible">True</property>
 	      <property name="can_focus">True</property>
@@ -1997,20 +1993,7 @@
 	  </child>
 
 	  <child>
-	    <widget class="GtkButton" id="btnCancel">
-	      <property name="can_focus">True</property>
-	      <property name="label">gtk-cancel</property>
-	      <property name="use_stock">True</property>
-	      <property name="relief">GTK_RELIEF_NORMAL</property>
-	      <property name="focus_on_click">True</property>
-	      <signal name="clicked" handler="on_btnCancel_clicked" last_modification_time="Mon, 31 Oct 2005 09:21:35 GMT"/>
-	    </widget>
-	    <packing>
-	      <property name="padding">0</property>
-	      <property name="expand">False</property>
-	      <property name="fill">False</property>
-	      <property name="pack_type">GTK_PACK_END</property>
-	    </packing>
+	    <placeholder/>
 	  </child>
 	</widget>
 	<packing>
